--- a/win/packaging/ca/CMakeLists.txt
+++ b/win/packaging/ca/CMakeLists.txt
@@ -59,5 +59,5 @@ FIND_LIBRARY(WIX_DUTIL_LIBRARY
 
 ADD_VERSION_INFO(wixca SHARED WIXCA_SOURCES)
 ADD_LIBRARY(wixca SHARED EXCLUDE_FROM_ALL ${WIXCA_SOURCES})
-TARGET_LINK_LIBRARIES(wixca ${WIX_WCAUTIL_LIBRARY} ${WIX_DUTIL_LIBRARY} 
+TARGET_LINK_LIBRARIES(wixca "${WIX_WCAUTIL_LIBRARY}" "${WIX_DUTIL_LIBRARY}" 
   msi version winservice)
